vlib/v/checker/tests/orm_sub_struct_primary_key.vv
import db.sqlite

struct Payload {
	data string
}

struct Message {
	id      int @[primary; sql: serial]
	payload Payload
}

fn main() {
	db := sqlite.connect(':memory:')!
	_ := sql db {
		select from Message
	}!
}
